# root/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weston_utils"
version = "0.1.0"
description = "Reusable utility modules for PostgreSQL, logging, and analytics."
authors = [
  { name = "Chris Weston" }
]
readme = "README_weston_utils.md"
requires-python = ">=3.8"

dependencies = [
  "pandas>=1.3.0,<3.0.0",
  "sqlalchemy>=1.4.0",
  "psycopg2-binary>=2.8.6",
  "python-dotenv>=0.19.0"
]

[project.urls]
Homepage = "https://github.com/weston-ai/cloud-etl-postgres-ml"
Repository = "https://github.com/weston-ai/cloud-etl-postgres-ml"
"Dev Branch" = "https://github.com/weston-ai/cloud-etl-postgres-ml/tree/dev"
"Source (weston_utils)" = "https://github.com/weston-ai/cloud-etl-postgres-ml/tree/dev/weston_utils"

[tool.setuptools.packages.find]
where = ["."]

#[tool.setuptools]
#packages = ["weston_utils"]

#[tool.setuptools.package-dir]
#"" = "weston_utils"